// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common/Banner WithHTML smoke-test 1`] = `
<div>
  <a
    href="https://nodejs.org/en/"
    target="_blank"
    rel="noopener noreferrer"
  >
    <p>
      Banner HTML
    </p>
  </a>
</div>
`;

exports[`Common/Banner WithHTMLImage smoke-test 1`] = `
<div>
  <a
    href="https://nodejs.org/en/"
    target="_blank"
    rel="noopener noreferrer"
  >
    <img
      src="/static/images/nodejs-training.png"
      alt="Banner Image"
    >
  </a>
</div>
`;

exports[`Common/Banner WithText smoke-test 1`] = `
<div>
  <p>
    <a
      href="https://nodejs.org/en/"
      target="_blank"
      rel="noopener noreferrer"
    >
      Read More
    </a>
    Banner Text
  </p>
</div>
`;
